# ampl-mcp-server

./: .gitignore  LICENSE  README.md  ampl_engine.py  data_pipeline.py  pyproject.toml  schemas.py  server.py  utils.py
.claude/: settings.local.json
